--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -14,7 +14,7 @@
             <chat-button chatroom_id.two-way="chatroom_id" new-chatroom.delegate="create_chatroom()"></chat-button>
         </div>
         <div class="row">
-            <div class="col-md-7" style="display:flex;flex-direction:column;" id="photo-box">
+            <div class="col-md-7" style="display:flex;flex-direction:column;margin-top:16px;" id="photo-box">
                 <img src.bind="photo_src" width="${photo_width}" click.trigger="open_full_size_photo()" />
                 <span dir="${theme.rtltr}" if.bind="photographer_name">${'photos.photographer-name' & t}: ${photographer_name}</span>
                 <date-range label="photos.photo-date" 
@@ -34,7 +34,7 @@
                 <div class="row" style="padding-right:15px;">
                     <div class="fr-view" dir="rtl">
                         <div class="big-story-panel">
-                            <div if.bind="! user.editing" class="row" style="padding-top:8px;width:100%">
+                            <div if.bind="! user.editing" class="row photo-story">
                                 <div class="fr-view" dir="${story_dir}">
                                     <div class="big-story-panel ${theme.font_size}" style="position:relative;">
                                         <p class="${story_dir} ${highlight_on}"> 
