--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -1,29 +1,29 @@
 <template>
 
     <div class="content-area photo-detail">
-        <div class="detail-header"> 
+        <div class="detail-header">
             <h3 style="float:left;cursor:pointer;padding:0;margin:0;" if.bind="theme.is_desktop">
                 <i class="far fa-share" t="[title]go-back" click.trigger="go_back()" if.bind="theme.is_desktop"></i>
             </h3>
             <h3 dir="rtl" style="float: right;margin:0px;">
                 ${photo_story.name}
             </h3>
-            <button id="word-highlighter" if.bind="keywords && keywords.length > 0 && ! user.editing"  
-                class="word-highlighter ${highlight_on}" click.trigger="toggle_highlight_on()" t="[title]stories.highlight-on">
+            <button id="word-highlighter" if.bind="keywords && keywords.length > 0 && ! user.editing"
+                class="word-highlighter ${highlight_on}" click.trigger="toggle_highlight_on()"
+                t="[title]stories.highlight-on">
             </button>
             <chat-button chatroom_id.two-way="chatroom_id" new-chatroom.delegate="create_chatroom()"></chat-button>
         </div>
         <div class="row">
             <div class="col-md-7" style="display:flex;flex-direction:column;margin-top:16px;" id="photo-box">
                 <img src.bind="photo_src" width="${photo_width}" click.trigger="open_full_size_photo()" />
-                <span dir="${theme.rtltr}" if.bind="photographer_name">${'photos.photographer-name' & t}: ${photographer_name}</span>
-                <date-range label="photos.photo-date" 
-                    base_date_str.bind="photo_date_str" 
-                    hide_label_if_no_date.bind="true"
-                    span_size.bind="photo_date_datespan"
-                    range_options.bind="[1,2,3,5,10, 20, 50, 100, 120]"
-                    change.delegate="update_photo_date($event)">
+                <span dir="${theme.rtltr}" if.bind="photographer_name">${'photos.photographer-name' & t}:
+                    ${photographer_name}</span>
+                <date-range label="photos.photo-date" if.bind="photo_date_str" base_date_str.bind="photo_date_str"
+                    hide_label_if_no_date.bind="true" span_size.bind="photo_date_datespan"
+                    range_options.bind="[1,2,3,5,10, 20, 50, 100, 120]" change.delegate="update_photo_date($event)">
                 </date-range>
+                <span if.bind="keywords">${'photos.keywords' & t}: ${keywords}</span>
             </div>
             <div class="col-md-5">
                 <div class="row">
@@ -31,19 +31,57 @@
                         <span style="float:right;direction:rtl">${photo_story.source}:</span>
                     </div>
                 </div>
-                <div class="row" style="padding-right:15px;">
+                <div class="row" style="padding-right:15px;margin-top:16x;">
                     <div class="fr-view" dir="rtl">
-                        <div class="big-story-panel">
+                        <div class="big-story-panel" style="padding-right:0">
                             <div if.bind="! user.editing" class="row photo-story">
                                 <div class="fr-view" dir="${story_dir}">
-                                    <div class="big-story-panel ${theme.font_size}" style="position:relative;">
-                                        <p class="${story_dir} ${highlight_on}"> 
-                                            <compose if.bind="photo_story.story_text" view-model='../stories/render-story' model.bind="highlightedHtml"></compose>
+                                    <div class="big-story-panel ${theme.font_size}" style="position:relative;height:220px;">
+                                        <p class="${story_dir} ${highlight_on}">
+                                            <compose if.bind="photo_story.story_text"
+                                                view-model='../stories/render-story' model.bind="highlightedHtml">
+                                            </compose>
                                         </p>
                                     </div>
                                 </div>
                             </div>
-                            <editable if.bind="user.editing" settings.bind="{show_date:false, class:'story-section', checkable: false}" story.bind="photo_story"></editable>
+                            <div if.bind="user.editing" style="display:flex;flex-direction:column;">
+                                <editable if.bind="user.editing" style="height:180px;background-color:beige;margin-bottom:12px;"
+                                    settings.bind="{show_date:false, class:'story-section', checkable: false}"
+                                    story.bind="photo_story"></editable>
+                                <div class="row multi-select-div" style="margin-bottom:15px;position:relative;width:300px;margin-right:20px;">
+                                    <div class="row multi-select-div" style="margin-bottom:15px;position:relative;">
+                                        <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">
+                                            ${'stories.categories'
+                                            & t}</div>
+                                        <help if.bind="phase=='photos-ready-to-edit'" topic="photos.ready-to-edit" ,
+                                            position="bottom" style="position:absolute;left:2px;top:2px;"></help>
+                                        <help if.bind="phase=='applying-to-photos'" topic="apply-to-selected-photos" ,
+                                            position="bottom" style="position:absolute;left:2px;top:2px;"></help>
+                                        <help if.bind="phase=='photos-not-editing'" topic="tags"
+                                            position="${theme.is_desktop ? 'bottom' : 'right'}"
+                                            style="position:absolute;left:2px;top:2px;"></help>
+                                        <multi-select options.bind="topic_list"
+                                            selected_options.bind="params.selected_topics"
+                                            settings.bind="options_settings" has_groups.bind="has_grouped_topics"
+                                            place_holder_text="photos.click-topic"
+                                            ms-change.delegate="handle_topic_change($event) ">
+                                        </multi-select>
+                                    </div>
+                                    <div class="row multi-select-div">
+                                        <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">
+                                            ${'photos.photographers' & t}</div>
+                                        <multi-select options.bind="photographer_list"
+                                            place_holder_text="photos.click-photographer"
+                                            selected_options.bind="params.selected_photographers"
+                                            settings.bind="photographers_settings"
+                                            new-name.delegate="add_photographer($event)"
+                                            name-changed.delegate="photographer_name_changed($event)"
+                                            ms-change.delegate="handle_photographer_change($event)">
+                                        </multi-select>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
