--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -27,11 +27,12 @@
             </div>
             <div class="col-md-5">
                 <div class="row">
-                    <div class="col-md-4 col-md-offset-8" if.bind="photo_story.source">
-                        <span style="float:right;direction:rtl">${photo_story.source}:</span>
+                    <div class="col-md-4 col-md-offset-8">
+                        <span style="float:right;direction:rtl" if.bind="photo_story.source">${photo_story.source}:</span>
+                        <span if.bind="! photo_story.source">&nbsp;</span>
                     </div>
                 </div>
-                <div class="row" style="padding-right:15px;margin-top:16px;">
+                <div class="row" style="padding-right:15px;">
                     <div class="fr-view" dir="rtl">
                         <div style="padding-right:0">
                             <div if.bind="! user.editing" class="row photo-story">
