pass "user editing"

--- a/src/photos/upload-photos.html
+++ b/src/photos/upload-photos.html
@@ -3,7 +3,7 @@
         <div class="col-md-10 col-md-offset-2">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h1 class="panel-title text-center"><strong>${"audios.upload-files" & t}</strong>
+                    <h1 class="panel-title text-center"><strong>${"photos.upload-files" & t}</strong>
                     </h1>
                 </div>
                 <div class="panel-body">
