first time input topics/photographers

--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -154,6 +154,7 @@
                             settings.bind="options_settings"
                             has_groups.bind="has_grouped_topics"
                             option_groups.bind="topic_groups"
+                            first_time.bind="no_topics_yet"
                             new-name.delegate="add_topic($event)"
                             remove-option.delegate="remove_topic($event)"
                             name-changed.delegate="topic_name_changed($event)"
@@ -168,6 +169,7 @@
                         <multi-select options.bind="photographer_list"
                             place_holder_text="photos.click-photographer"
                             selected_options.bind="params.selected_photographers"
+                            first_time.bind="no_photographers_yet"
                             settings.bind="photographers_settings"
                             has_groups.bind="has_grouped_photographers"
                             new-name.delegate="add_photographer($event)"
