--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -96,6 +96,7 @@
                         <multi-select options.bind="topic_list"
                             selected_options.bind="params.selected_topics"
                             settings.bind="options_settings"
+                            first_time.bind="no_topics_yet"
                             has_groups.bind="has_grouped_topics"
                             option_groups.bind="topic_groups"
                             name="topics"
@@ -112,6 +113,7 @@
                         <multi-select options.bind="photographer_list"
                             place_holder_text="photos.click-photographer"
                             selected_options.bind="params.selected_photographers"
+                            first_time.bind="no_photographers_yet"
                             settings.bind="photographers_settings"
                             has_groups.bind="has_grouped_photographers"
                             new-name.delegate="add_photographer($event)"
