--- a/src/resources/elements/multi-select/multi-select.html
+++ b/src/resources/elements/multi-select/multi-select.html
@@ -1,10 +1,10 @@
 <template class="multi-select" dir="${theme.rtltr}">
     <require from="./multi-select.css">
     </require>
-    <div class="input-group search-filter" if.bind="options.length > 0">
+    <div class="input-group search-filter" if.bind="options.length > 0 || first_time">
         <search-input value.bind="filter" placeholder.bind="place_holder_text" height="32" help_topic.bind="settings.help_topic" filter-change.delegate="enter_word($event)"></search-input>
     </div>
-    <button if.bind="filter_size == 0 && can_add" class="btn btn-success btn-sm cl-create-btn" 
+    <button if.bind="can_add" class="btn btn-success btn-sm cl-create-btn" 
         click.delegate="dispatch_new_item_event($event)"
         style="width:88%;font-size:110%;">
         ${'multi-select.add-item' & t} ${filter}
