--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -126,6 +126,7 @@
                             style="position:absolute;left:0px;top:26px;"></help>
                         <multi-select options.bind="topic_list" place_holder_text="photos.click-topic"
                             selected_options.bind="params.selected_topics" height.bind="220"
+                            first_time.bind="no_topics_yet"
                             settings.bind="options_settings" has_groups.bind="has_grouped_topics"
                             option_groups.bind="topic_groups" ms-change.delegate="handle_topic_change($event)"
                             new-name.delegate="add_topic($event)" name-changed.delegate="topic_name_changed($event)"
