--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -17,18 +17,21 @@
         <div class="row">
             <div class="col-md-7" style="display:flex;flex-direction:column;margin-top:16px;" id="photo-box">
                 <img src.bind="photo_src" width="${photo_width}" click.trigger="open_full_size_photo()" />
+                <span dir="${theme.rtltr}" if.bind="photo_story.name">${photo_story.name}</span>
                 <span dir="${theme.rtltr}" if.bind="photographer_name">${'photos.photographer-name' & t}:
                     ${photographer_name}</span>
-                <date-range label="photos.photo-date" if.bind="photo_date_str || user.editing" base_date_str.bind="photo_date_str"
-                    hide_label_if_no_date.bind="true" span_size.bind="photo_date_datespan"
-                    range_options.bind="[1,2,3,5,10, 20, 50, 100, 120]" change.delegate="update_photo_date($event)">
+                <date-range label="photos.photo-date" if.bind="photo_date_str || user.editing"
+                    base_date_str.bind="photo_date_str" hide_label_if_no_date.bind="true"
+                    span_size.bind="photo_date_datespan" range_options.bind="[1,2,3,5,10, 20, 50, 100, 120]"
+                    change.delegate="update_photo_date($event)">
                 </date-range>
                 <span if.bind="topic_names">${'photos.keywords' & t}: ${topic_names}</span>
             </div>
             <div class="col-md-5">
                 <div class="row">
                     <div class="col-md-4 col-md-offset-8">
-                        <span style="float:right;direction:rtl" if.bind="photo_story.source">${photo_story.source}:</span>
+                        <span style="float:right;direction:rtl"
+                            if.bind="photo_story.source">${photo_story.source}:</span>
                         <span if.bind="! photo_story.source">&nbsp;</span>
                     </div>
                 </div>
@@ -37,7 +40,8 @@
                         <div style="padding-right:0">
                             <div if.bind="! user.editing" class="row photo-story">
                                 <div class="fr-view" dir="${story_dir}">
-                                    <div class="${theme.font_size}" style="position:relative;height:70vh;margin-right:16px;overflow:auto;">
+                                    <div class="${theme.font_size}"
+                                        style="position:relative;height:70vh;margin-right:16px;overflow:auto;">
                                         <p class="${story_dir} ${highlight_on}">
                                             <compose if.bind="photo_story.story_text"
                                                 view-model='../stories/render-story' model.bind="highlightedHtml">
@@ -50,7 +54,8 @@
                                 <editable if.bind="user.editing" style="background-color:beige;margin-bottom:12px;"
                                     settings.bind="{show_date:false, class:'story-section', checkable: false}"
                                     story.bind="photo_story"></editable>
-                                <div class="multi-select-div" style="margin-bottom:0px;position:relative;width:80%;height:60vh;overflow:auto;">
+                                <div class="multi-select-div"
+                                    style="margin-bottom:0px;position:relative;width:80%;height:60vh;overflow:auto;">
                                     <div class="multi-select-div" style="margin-bottom:15px;position:relative;">
                                         <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">
                                             ${'stories.categories'
@@ -64,11 +69,9 @@
                                             style="position:absolute;left:2px;top:2px;"></help>
                                         <multi-select options.bind="topic_list"
                                             selected_options.bind="params.selected_topics"
-                                            first_time.bind="no_topiccs_yet"
-                                            option_groups.bind="topic_groups"
-                                            new-name.delegate="add_topic($event)"
-                                            settings.bind="options_settings" has_groups.bind="has_grouped_topics"
-                                            place_holder_text="photos.click-topic"
+                                            first_time.bind="no_topiccs_yet" option_groups.bind="topic_groups"
+                                            new-name.delegate="add_topic($event)" settings.bind="options_settings"
+                                            has_groups.bind="has_grouped_topics" place_holder_text="photos.click-topic"
                                             ms-change.delegate="handle_topic_change($event) ">
                                         </multi-select>
                                     </div>
