--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -3,7 +3,11 @@
     <div class="content-area photo-detail">
         <div class="detail-header">
             <h3 style="float:left;cursor:pointer;padding:0;margin:0;" if.bind="theme.is_desktop">
-                <i class="far fa-share" t="[title]go-back" click.trigger="go_back()" if.bind="theme.is_desktop"></i>
+                <i class="far fa-arrow-up fa-rotate-90 ${next_class}" t="[title]photos.next-slide" click.trigger="go_next($event)"
+                    if.bind="photo_ids.length > 1"></i>
+                <i class="far fa-arrow-up" t="[title]go-back" click.trigger="go_back()" if.bind="theme.is_desktop"></i>
+                <i class="far fa-arrow-up fa-rotate-270 ${prev_class}" t="[title]photos.prev-slide" click.trigger="go_prev($event)"
+                    if.bind="photo_ids.length > 1"></i>
             </h3>
             <h3 dir="rtl" style="float: right;margin:0px;">
                 ${photo_story.name}
