photo detail fixes.

--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -55,7 +55,7 @@
                                 </div>
                             </div>
                             <div if.bind="user.editing" style="display:flex;flex-direction:column;">
-                                <editable if.bind="user.editing" style="background-color:beige;margin-bottom:12px;"
+                                <editable style="background-color:beige;margin-bottom:12px;"
                                     settings.bind="{show_date:false, class:'story-section', checkable: false}"
                                     story.bind="photo_story"></editable>
                                 <div class="multi-select-div"
