--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -70,37 +70,22 @@
                     click.delegate="cancel_photo_crop($event)"><i class="fa fa-lg fa-undo-alt"></i></button>
                 <button show.bind="user.editing" aubs-tooltip="text.bind:rotate" class="side-tool rotate"
                     click.delegate="rotate_photo($event)"><i class="fa fa-lg fa-undo"></i></button>
-                <button id="next-slide-button" show.bind="slide_list.length > 1" aubs-tooltip="text.bind:next_slide_txt"
-                    class="side-tool next-slide" click.delegate="next_slide($event)"><i
-                        class="far fa-lg fa-arrow-alt-right"></i></button>
-                <button show.bind="slide_list.length > 1" aubs-tooltip="text.bind:prev_slide_txt"
-                    class="side-tool prev-slide" click.delegate="prev_slide($event)"><i
-                        class="far fa-lg fa-arrow-alt-left"></i></button>
             </div>
         </div>
         <div>
-            <span if.bind="! settings.no_photo_info" class="full-size-photo-info ${theme.rtltr}"
+            <span if.bind="! user.editing" class="full-size-photo-info ${theme.rtltr}"
                 css="width:${Math.max(slide[slide.side].width)}px;">
-                <span if.bind="!user.editing" class="photo-info-names">
+                <span class="photo-info-names">
                     ${photo_info.name}.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;${'photos.photographer' &
                     t}:&nbsp;${photo_info.photographer}.
-                </span>
-                <span if.bind="user.editing">
-                    <form class="form-inline">
-                        <input type="text" value.bind="photo_info.name" style="color:black;width:400px;"
-                            change.delegate="save_photo_caption($event)">
-                        <button style="border:none;background-color:black">
-                            <i class="fa fa-save"></i>
-                        </button>
-                    </form>
                 </span>
                 <date-range label="photos.photo-date" range_options.bind="[1,2,3,5,10, 20, 50, 100, 120]"
                     change.delegate="save_photo_info($event)" base_date_str.bind="photo_info.photo_date_str"
                     hide_label_if_no_date.bind="true" span_size.bind="photo_info.photo_date_datespan">
                 </date-range>
             </span>
-            <span if.bind="settings.no_photo_info" class="full-size-photo-info ${theme.rtltr}"
-                css="width:${Math.max(slide[slide.side].width)}px;font-size:150%;">
+            <span if.bind="user.editing" class="full-size-photo-info ${theme.rtltr}"
+                css="width:${Math.max(slide[slide.side].width)}px;font-size:130%;color:yellow;">
                 ${instruction}
             </span>
         </div>
