--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -73,7 +73,7 @@
                                             style="position:absolute;left:2px;top:2px;"></help>
                                         <multi-select options.bind="topic_list"
                                             selected_options.bind="params.selected_topics"
-                                            first_time.bind="no_topiccs_yet" option_groups.bind="topic_groups"
+                                            first_time.bind="no_topics_yet" option_groups.bind="topic_groups"
                                             new-name.delegate="add_topic($event)" settings.bind="options_settings"
                                             has_groups.bind="has_grouped_topics" place_holder_text="photos.click-topic"
                                             ms-change.delegate="handle_topic_change($event) ">
